--- a/index.html
+++ b/index.html
@@ -144,15 +144,15 @@
       <!-- footer  -->
        <footer>
         <div class="social">
-          <a href=""><i data-feather="instagram">Instagram</i></a>
-          <a href=""><i data-feather="facebook">Facebook</i></a>
-          <a href=""><i data-feather="phone-call">Handphone</i></a>
+          <a href="https://www.instagram.com/fuadsidqii"><i data-feather="instagram">Instagram</i></a>
+          <a href="https://www.facebook.com/fuad.sidqi"><i data-feather="facebook">Facebook</i></a>
+          <a href="wa.me/085641364925"><i data-feather="phone-call">Handphone</i></a>
         </div>
 
         <div class="link">
           <a href="#home">Home</a>
           <a href="#about">Tentang Kami</a>
-          <a href="#produk">Product</a>
+          <a href="#produk">Produk</a>
           <a href="#kontak">kontak</a>
         </div>
 
