--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
         <a href="#jawaban">Fuad Sidqi M</a>
         <a href="#jawaban">102230058</a>
         <a href="#jawaban">IM23B</a>
+        <a href="#jawaban">IM23B</a>
+        <a href="#jawaban">IM23B</a>
+        <a href="#jawaban">IM23B</a>
+        <a href="#jawaban">IM23B</a>
       </div>
 
       <div class="navbar-nav">
